added undo kick,move if no arguments specified